# AISmartRouter

./: .gitignore  README.md  README_en.md  pyproject.toml
config/: models_registry.yaml  rules.yaml  settings.yaml  user_preferences.yaml
smart_router/: __init__.py  main.py
smart_router/analyzer/: __init__.py  cluster.py  pattern_detector.py  rule_generator.py  scheduler.py  validator.py
smart_router/api/: admin.py  completions.py  embeddings.py  models.py
smart_router/config/: loader.py
smart_router/logger/: __init__.py  call_recorder.py  feature_extractor.py  models.py
smart_router/routing/: capability_matcher.py  cost_ranker.py  decision_cache.py  preference_filter.py  router.py
smart_router/solidification/: __init__.py  response_builder.py  rule_matcher.py  rule_store.py
tests/: test_solidification.py
